Added mapdb deps and used g1gc